storage/spider/ha_spider.cc
@@ -335,7 +335,7 @@ int ha_spider::open(
     may_be_clone = FALSE;
   ha_spider **pt_handler_share_handlers;
 #ifdef SPIDER_HAS_HASH_VALUE_TYPE
-  my_hash_value_type hash_value;
+  my_hash_value_type hash_value = 0;
 #endif
 #endif
   DBUG_ENTER("ha_spider::open");
@@ -412,7 +412,9 @@ int ha_spider::open(
     partition_handler_share->between_flg = FALSE;
     partition_handler_share->idx_bitmap_is_set = FALSE;
     partition_handler_share->rnd_bitmap_is_set = FALSE;
+#ifdef SPIDER_HAS_HASH_VALUE_TYPE
     partition_handler_share->table_hash_value = hash_value;
+#endif
     partition_handler_share->creator = this;
     pt_handler_share_creator = this;
     if (part_num)
